# jax

./: .gitignore
.git.corrupt-backup-20260419-205518/: config  index  packed-refs
.git.corrupt-backup-20260419-205518/logs/refs/heads/: main
.git.corrupt-backup-20260419-205518/logs/refs/remotes/origin/: HEAD
.git.corrupt-backup-20260419-205518/objects/pack/: pack-6930cf3967d226d7d52be28353f4f9b922f6708f.idx  pack-6930cf3967d226d7d52be28353f4f9b922f6708f.rev
.git.corrupt-backup-20260419-205518/refs/heads/: main
src/: jax_arduino.ino
src/camera_ros/: CMakeLists.txt  package.xml
src/camera_ros/config/: camera.yaml
src/camera_ros/launch/: camera.launch.py
src/jax/: CMakeLists.txt  package.xml
src/jax/config/: driver.yaml
src/jax/launch/: jax.launch.py  keyboard_cmd_mode.launch.py  twist_keyboard_test.launch.py  twist_teleop_jax_sim.launch.py
src/jax/scripts/: cmd_vel_to_joy_bridge.py  jax_driver.py  jax_driver_old.py  keyboard_cmd_mode.py
src/jax_behaviors/: CMakeLists.txt  package.xml
src/jax_behaviors/config/: poses.yaml
src/jax_behaviors/launch/: behaviors.launch.py
src/jax_behaviors/scripts/: mode_manager.py
src/jax_control/: CMakeLists.txt  package.xml
src/jax_control/src/jax_control/: Config.py  Controller.py  Kinematics.py  State.py  SwingLegController.py
src/jax_description/: CMakeLists.txt  package.xml
src/jax_description/launch/: jax_rviz.launch.py
src/jax_description/meshes/: L_link2.dae  R_link2.dae  base_link.dae
src/jax_description/urdf/: jax.urdf  jax_description.csv
src/jax_gazebo/: CMakeLists.txt  package.xml
src/jax_gazebo/config/: jax_gz_ros2_control.yaml
src/jax_gazebo/launch/: simulation.launch.py
src/jax_gazebo/launch/world/: normal.world
src/jax_hardware_interfacing/jax_input_interfacing/: CMakeLists.txt  package.xml
src/jax_hardware_interfacing/jax_input_interfacing/scripts/: Keyboard.py
src/jax_hardware_interfacing/jax_input_interfacing/src/jax_input_interfacing/: InputInterface.py
src/jax_hardware_interfacing/jax_peripheral_interfacing/: ARDUINO_IMU_SERIAL_SETUP.md  CMakeLists.txt  MOCK_MJPEG_SETUP.md  package.xml
src/jax_hardware_interfacing/jax_peripheral_interfacing/scripts/: battery_voltage_checking.py  bno08x_imu_publisher.py  cpu_temp_publisher.py  jax_display_node.py  jax_wifi_status_publisher.py  mock_mjpeg_server.py  mock_peripherals.py  odom_publisher.py  serial_imu_publisher.py
src/jax_hardware_interfacing/jax_servo_interfacing/: CMakeLists.txt  package.xml
src/jax_hardware_interfacing/jax_servo_interfacing/src/jax_servo_interfacing/: CalibrateServos.py  HardwareInterface.py
src/jax_msgs/: CMakeLists.txt  package.xml
src/jax_msgs/msg/: JointSpace.msg  TaskSpace.msg
src/jax_utilities/: package.xml  setup.py
src/jax_utilities/src/jax_utilities/: Tests.py
