<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jax</name>
  <version>0.0.0</version>
  <description>Bringup, driver, and launch files for the Jax quadruped</description>
  <maintainer email="alex@todo.todo">alex</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>jax_control</exec_depend>
  <exec_depend>jax_msgs</exec_depend>
  <exec_depend>jax_input_interfacing</exec_depend>
  <exec_depend>jax_servo_interfacing</exec_depend>
  <exec_depend>jax_peripheral_interfacing</exec_depend>
  <exec_depend>jax_utilities</exec_depend>
  <exec_depend>jax_behaviors</exec_depend>
  <exec_depend>jax_gazebo</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <!-- Optional: ros2 launch jax twist_keyboard_test.launch.py -->
  <exec_depend>teleop_twist_keyboard</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
