<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jax_peripheral_interfacing</name>
  <version>0.0.0</version>
  <description>IMU, LCD, and battery monitoring for Jax</description>
  <maintainer email="alex@todo.todo">alex</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>jax_msgs</depend>
  <depend>rclpy</depend>
  <depend>ament_index_python</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-pil</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
